started cs711